kubernetes/charts/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yanychoi-com
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - '*.yanychoi.com'
    port:
      name: http
      number: 80
      protocol: HTTP
